# ML-for-Market-Prediction

./: .gitattributes  .gitignore  Data  README.md  master_minute.csv  master_minute.parquet
Data_backup_20250905_005456/: master_dataset.csv
MODELS/v1/: 1.1.0  1.2.0  1.7.0  1.9.0  data_loader.py  main.py  metrics.csv  model.py  predictions.csv  visualization.py
MODELS/v2/: config.py
MODELS/v2/catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
MODELS/v2/results/: predictions_v2.csv
MODELS/v3/: README.md  VOL-RISK LAB Implementation Plan.txt  pyproject.toml
MODELS/v3/configs/: cv.yaml  default.yaml  paths.yaml
MODELS/v3/scripts/: train.py  train_robust.py
MODELS/v3/src/vrisk/calendars/: sessions.py
MODELS/v3/src/vrisk/ensembles/: stacking_meta_cls.py  stacking_meta_cls_fixed.py
MODELS/v3/src/vrisk/evaluation/: eval_classify.py
MODELS/v3/src/vrisk/features/: vol_rv_bv_jv.py
MODELS/v3/src/vrisk/io/: load_master.py  load_master_robust.py
MODELS/v3/src/vrisk/labeling/: rv_daily.py
MODELS/v3/src/vrisk/models/: lgbm_cls.py
tools/git/: README.md  autopush.ps1  instructions.txt  sync_now.bat  watch_and_push.ps1
v1/: 0.12.0  1.23.0  1.5.0  2.10.0  3.5.0  4.64.0  README.md  config.py  feature_engineering.py  feature_importance.csv  install_packages.bat  requirements.txt  target_creation.py
v2/: enhanced_features.py  ensemble_model.py  final_v2.py  improvements_v1_vs_v2.md  main_v2.py  quickfix_v2.py  visualization_v2.py
v2/catboost_info/: catboost_training.json
v2/catboost_info/learn/: events.out.tfevents
v2/catboost_info/test/: events.out.tfevents
v2/results/: performance_report.txt
v3/: VOL-RISK LAB Implementation Plan.txt  requirements.txt  run_training.bat
v3/20251004_015134/: error_report.json
v3/20251004_055849/: error_report.json
v3/20251004_060315/: error_report.json
v3/configs/: default.yaml
v3/configs/cv/: cv.yaml
v3/configs/features/: core.yaml
v3/configs/models/: lgbm_cls.yaml
v3/configs/paths/: paths.yaml
v3/scripts/: train_complete.py
v3/src/vrisk/: __init__.py
v3/src/vrisk/calendars/: __init__.py  sessions.py
v3/src/vrisk/ensembles/: __init__.py  stacking_meta_cls_fixed.py
v3/src/vrisk/io/: __init__.py  (+2 more)
(+31 files in other folders)
