[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-risk-lab"
version = "3.0.0"
description = "Production-grade ML system for volatility risk prediction"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pandas>=2.1.0",
    
    # ML/Stats
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "statsmodels>=0.14.0",
    
    # Deep Learning
    "torch>=2.1.0",
    "pytorch-lightning>=2.0.0",
    
    # Configuration & Tracking
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "mlflow>=2.8.0",
    
    # Validation & Testing
    "great-expectations>=0.18.0",
    "pandera>=0.17.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    
    # HPO & Parallelization
    "optuna>=3.4.0",
    "ray[default]>=2.8.0",
    "joblib>=1.3.0",
    
    # Interpretability & Monitoring
    "shap>=0.43.0",
    "evidently>=0.4.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # Documentation
    "quarto>=1.4.0",
    "sphinx>=7.2.0",
    
    # Development
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipykernel>=6.26.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
]

gpu = [
    "cupy-cuda12x>=12.3.0",
]

[tool.setuptools]
packages = ["src.vrisk"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src.vrisk --cov-report=term-missing"